[fix] use materialize css inputs and set defaultValue to avoid cursor jump

--- a/src/web/pcss/main.pcss
+++ b/src/web/pcss/main.pcss
@@ -258,3 +258,8 @@ app-drawer-layout:not([narrow]) .hide-when-wide {
   position: relative;
   min-height: 70vh;
 }
+
+
+textarea.materialize-textarea{
+  /*padding: 0;*/
+}
